<resources>
    <string name="app_name">Daily Deal</string>
    <string name="currency">LE</string>


    <string name="free">Free</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="write_your_email">Write your email</string>
    <string name="write_your_password_at_least_8_characters">Write your password (at least 8 characters)</string>
    <string name="write_your_password_again">Write your password again</string>
    <string name="write_your_name">Write your Name</string>
    <string name="write_your_meal_delivery_address">Write your Meal Delivery Address</string>
    <string name="write_your_phone_number">Write your Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">new user?</string>
    <string name="my_orders">My Orders</string>
    <string name="previous_orders_history">Previous orders history</string>
    <string name="write_meal_name">Write Meal Name</string>
    <string name="description">Description</string>
    <string name="meal_description">Meal Description</string>
    <string name="restaurant">Restaurant</string>
    <string name="meal_restaurant">Meal Restaurant</string>
    <string name="available_on">Available on :</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="original_price">Original Price</string>
    <string name="enter_original_price">Enter original price</string>
    <string name="discount_price">Discount Price</string>
    <string name="enter_discount_price">Enter discount price</string>
    <string name="cancel">Cancel</string>
    <string name="make_order">Make Order</string>
    <string name="confirm_your_today_s_meal_deal">Confirm Your Today\'s Meal Deal</string>
    <string name="description_">Description:</string>
    <string name="delivery_address_">Delivery Address:</string>
    <string name="you_can_order_only_one_meal_per_day">You can order only one meal per day</string>
    <string name="confirm">Confirm</string>
    <string name="check_today_s_deals">Check today\'s deals</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="all">All</string>
    <string name="don_t_have_permission_to_create_meals">%1$s don\'t have permission to create meals</string>
    <string name="user_role">User: %1$s | Role: %2$s</string>
    <string name="today">today</string>
    <string name="sign_out">Sign out ?</string>
    <string name="yes">yes</string>
    <string name="error_getting_order_data">Error getting order data</string>
    <string name="you_got_your_meal_deal_to_day">You got your Meal Deal to day.</string>
    <string name="you_can_order_tomorrow">You can order Tomorrow !</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="error_making_order">Error Making Order</string>
    <string name="create_meal">Create Meal</string>
    <string name="create">Create</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="update">Update</string>
    <string name="delete_this_meal">Delete this Meal ?</string>
    <string name="meal_created_successfully">Meal Created Successfully</string>
    <string name="error_creating_meal">Error Creating Meal</string>
    <string name="meal_updated_successfully">Meal Updated Successfully</string>
    <string name="error_updating_meal">Error Updating Meal</string>
    <string name="meal_deleted_successfully">Meal Deleted Successfully</string>
    <string name="error_deleting_meal">Error Deleting Meal</string>
    <string name="field_can_t_be_empty">Field can\'t be empty</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="please_enter_a_valid_email">please enter a valid email</string>
    <string name="password_should_be_8_chars_with_upper_lower_and_symbols">password should be: 8 chars with upper, lower and symbols</string>
    <string name="account_created_successfully">Account Created Successfully</string>
    <string name="your_already_have_an_account_with_this_email">Your already have an account with this email</string>
    <string name="please_enter_your_full_name">please enter your full name</string>
    <string name="please_enter_your_full_delivery_address">please enter your full delivery address</string>
    <string name="please_enter_a_valid_number">please enter a valid number</string>
    <string name="password_not_matching">password not matching !</string>
</resources>