<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    tools:context=".view.fragments.SignUp">

    <TextView
        android:id="@+id/signUp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/signUp_emailLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/email"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_EmailField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"

                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="@color/grey"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_your_email"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signUp_passwordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/password"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_PasswordField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="@color/grey"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_your_password_at_least_8_characters"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signUp_passwordConfirmLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/confirm_password"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_ConfirmPasswordField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="@color/grey"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_your_password_again"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:password="true"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signUp_nameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/name"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_NameField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="@color/grey"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_your_name"
                    android:includeFontPadding="false"
                    android:inputType="textPersonName"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/signUp_addressLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/address"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_AddressField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="@color/grey"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_your_meal_delivery_address"
                    android:includeFontPadding="false"
                    android:inputType="textPostalAddress"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/signUp_phoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/phone_number"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/signUp_PhoneNumberField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="12dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColorHint="@color/grey"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/write_your_phone_number"
                    android:includeFontPadding="false"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/signUp_SignButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="?attr/colorSecondary"
                android:includeFontPadding="false"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textSize="20sp"
                app:cornerRadius="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/signUp_SignInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:elegantTextHeight="true"
                    android:gravity="start"
                    android:text="@string/back_to_sign_in"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>