<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragments.MakeOrder">

    <TextView
        android:id="@+id/make_order_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:includeFontPadding="false"
        android:text="@string/make_order"
        android:textColor="?attr/colorPrimary"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/make_order_secondaryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:includeFontPadding="false"
        android:text="@string/confirm_your_today_s_meal_deal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_order_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/make_order_card"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="?attr/background"
        app:cardCornerRadius="15dp"
        app:cardElevation="1.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_order_secondaryLabel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/make_order_card_image"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/make_order_card_Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:maxLines="2"
                android:minLines="1"
                android:text="Item Name"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/make_order_card_image"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/make_order_card_image"
                app:layout_constraintTop_toBottomOf="@+id/make_order_card_restaurant" />

            <TextView
                android:id="@+id/make_order_card_originalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/baseline_horizontal_rule_24"
                android:backgroundTint="?attr/colorOnSecondary"
                android:fontFamily="sans-serif-medium"
                android:text="0000LE"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/make_order_card_discountPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/make_order_card_discountPrice" />

            <TextView
                android:id="@+id/make_order_card_discountPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="0000LE"
                android:textColor="?attr/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/make_order_card_Name"
                app:layout_constraintTop_toBottomOf="@+id/make_order_card_Name" />

            <TextView
                android:id="@+id/make_order_card_restaurant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:includeFontPadding="false"
                android:singleLine="true"
                android:text="Restaurant"
                android:textColor="?attr/colorAccent"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/make_order_card_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/make_order_ItemDescriptionLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:singleLine="false"
        android:text="@string/description_"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_order_card" />

    <TextView
        android:id="@+id/make_order_ItemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:singleLine="false"
        android:text="Item Description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_order_ItemDescriptionLabel" />

    <TextView
        android:id="@+id/make_order_deliveryAddressLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:singleLine="false"
        android:text="@string/delivery_address_"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_order_ItemDescription" />

    <TextView
        android:id="@+id/make_order_deliveryAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:includeFontPadding="false"
        android:singleLine="false"
        android:text="Address"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_order_deliveryAddressLabel" />

    <TextView
        android:id="@+id/make_order_note"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:singleLine="false"
        android:text="@string/you_can_order_only_one_meal_per_day"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/make_order_ConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/make_order_ConfirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorPrimary"
        android:includeFontPadding="false"
        android:padding="15dp"
        android:text="@string/confirm"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/make_order_CancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/make_order_CancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:includeFontPadding="false"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>